Add Login/Logout Messages to Template

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -18,6 +18,9 @@
     </div>
     <section id="wrapper">
         <header><div class="login">
+                {% if text %}
+                    <h2>{{ text }}</h2>
+                {% endif %}
                 <form method="post">
                     Username:<br>
                     <input type="text" name="username" >
