--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -20,21 +20,22 @@
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
                                     <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
                                     <div class="card-body">                                       
-{% with messages = get_flashed_messages() %}
-{% if messages %}
-    {% for message in messages %}
-    <div class="alert alert-info" role="alert">
-        {{ message }}
-    </div>    
-    {% endfor %}
-{% endif %}
-{% endwith %}
+                                    {% with messages = get_flashed_messages(with_categories=true) %}
+                                    {% if messages %}
+                                        {% for category, message in messages %}
+                                        <div class="alert alert-{{ category }} alert-dismissible" role="alert">
+                                            {{ message }}
+                                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        {% endfor %}
+                                    {% endif %}
+                                    {% endwith %}
                                     <form action="" method="post">
-
-       
-                                            <div class="form-group"><label class="small mb-1" for="inputUsername">Email</label><input class="form-control py-4" id="inputUsername" type="text" placeholder="Enter email address" name="username"/></div>
-                                            <div class="form-group"><label class="small mb-1" for="inputPassword">Password</label><input class="form-control py-4" id="inputPassword" type="password" placeholder="Enter password" name="password"/></div>
-                                            <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0"><input type="submit" class="btn btn-primary" value="Login"></div>
+                                        <div class="form-group"><label class="small mb-1" for="inputUsername">Email</label><input class="form-control py-4" id="inputUsername" type="text" placeholder="Enter email address" name="username"/></div>
+                                        <div class="form-group"><label class="small mb-1" for="inputPassword">Password</label><input class="form-control py-4" id="inputPassword" type="password" placeholder="Enter password" name="password"/></div>
+                                        <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0"><input type="submit" class="btn btn-primary" value="Login"></div>
                                     </form>
                                     </div>
                                 </div>
