remove terms&conidtions links and change site to Altech

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -177,12 +177,7 @@
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid">
                         <div class="d-flex align-items-center justify-content-between small">
-                            <div class="text-muted">Copyright &copy; Your Website 2019</div>
-                            <div>
-                                <a href="#">Privacy Policy</a>
-                                &middot;
-                                <a href="#">Terms &amp; Conditions</a>
-                            </div>
+                            <div class="text-muted">Copyright &copy; Altech 2019</div>
                         </div>
                     </div>
                 </footer>
