Change font awesome icon for upload db file card

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -108,7 +108,7 @@
                             </div>
                             <div class="col-xl-6">
                                 <div class="card mb-4">
-                                    <div class="card-header"><i class="fas fa-chart-bar mr-1"></i>Update DB with Excel file</div>
+                                    <div class="card-header"><i class="fas fa fa-database mr-1"></i>Update DB with Excel file</div>
                                     <div class="card-body">                                        
                                         <form method=post enctype=multipart/form-data> 
                                             <div class="input-group">
