--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -108,7 +108,7 @@
                             </div>
                             <div class="col-xl-6">
                                 <div class="card mb-4">
-                                    <div class="card-header"><i class="fas fa-chart-bar mr-1"></i>Update DB with Excel file</div>
+                                    <div class="card-header"><i class="fas fa-database mr-1"></i>Update DB with Excel file</div>
                                     <div class="card-body">                                        
                                         <form method=post enctype=multipart/form-data> 
                                             <div class="input-group">
@@ -197,6 +197,12 @@
         <script src="/static/https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>
         <script src="/static/https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js" crossorigin="anonymous"></script>
         <script src="/static/assets/demo/datatables-demo.js"></script>
+	<script>
+            $('#inputGroupFile01').on('change',function(){
+                    var fileName = $(this).val().split('\\').pop();
+                    $(this).next('.custom-file-label').html(fileName);
+            })
+        </script>
     </body>
     <!-- based on the https://startbootstrap.com/templates/sb-admin/ template -->
 </html>
