--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -20,18 +20,7 @@
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
                                     <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
                                     <div class="card-body">                                       
-                                    {% with messages = get_flashed_messages(with_categories=true) %}
-                                    {% if messages %}
-                                        {% for category, message in messages %}
-                                        <div class="alert alert-{{ category }} alert-dismissible" role="alert">
-                                            {{ message }}
-                                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                                <span aria-hidden="true">&times;</span>
-                                            </button>
-                                        </div>
-                                        {% endfor %}
-                                    {% endif %}
-                                    {% endwith %}
+                                    {% include 'alert.html' %}
                                     <form action="" method="post">
                                         <div class="form-group"><label class="small mb-1" for="inputUsername">Email</label><input class="form-control py-4" id="inputUsername" type="text" placeholder="Enter email address" name="username"/></div>
                                         <div class="form-group"><label class="small mb-1" for="inputPassword">Password</label><input class="form-control py-4" id="inputPassword" type="password" placeholder="Enter password" name="password"/></div>
