Get current year from JS for copy left

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -170,9 +170,9 @@
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid">
                         <div class="d-flex align-items-center justify-content-between small">
-                            <div class="text-muted">Copyleft; Altech 2020</div>
+                            {% include 'copyleft.html' %}
                         </div>
-                    </div>
+                    </div>  
                 </footer>
             </div>
         </div>
