--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -37,12 +37,7 @@
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid">
                         <div class="d-flex align-items-center justify-content-between small">
-                            <div class="text-muted">Copyright &copy; Your Website 2019</div>
-                            <div>
-                                <a href="#">Privacy Policy</a>
-                                &middot;
-                                <a href="#">Terms &amp; Conditions</a>
-                            </div>
+                            {% include 'copyleft.html' %}
                         </div>
                     </div>
                 </footer>
