the table at the bottom of dashboard shows the last 5000 sms automagicaly

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -148,41 +148,29 @@
                                     <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                         <thead>
                                             <tr>
-                                                <th>Name</th>
-                                                <th>Position</th>
-                                                <th>Office</th>
-                                                <th>Age</th>
-                                                <th>Start date</th>
-                                                <th>Salary</th>
+                                                <th>Sender</th>
+                                                <th>Message</th>
+                                                <th>Answer</th>
+                                                <th>Date</th>
                                             </tr>
                                         </thead>
                                         <tfoot>
                                             <tr>
-                                                <th>Name</th>
-                                                <th>Position</th>
-                                                <th>Office</th>
-                                                <th>Age</th>
-                                                <th>Start date</th>
-                                                <th>Salary</th>
+                                                <th>Sender</th>
+                                                <th>Message</th>
+                                                <th>Answer</th>
+                                                <th>Date</th>
                                             </tr>
                                         </tfoot>
                                         <tbody>
+                                            {% for sms in data.smss %}
                                             <tr>
-                                                <td>Tiger Nixon</td>
-                                                <td>System Architect</td>
-                                                <td>Edinburgh</td>
-                                                <td>61</td>
-                                                <td>2011/04/25</td>
-                                                <td>$320,800</td>
+                                                <td>{{sms.sender}}</td>
+                                                <td>{{sms.message}}</td>
+                                                <td>{{sms.answer}}</td>
+                                                <td>{{sms.date}}</td>
                                             </tr>
-                                            <tr>
-                                                <td>Donna Snider</td>
-                                                <td>Customer Support</td>
-                                                <td>New York</td>
-                                                <td>27</td>
-                                                <td>2011/01/25</td>
-                                                <td>$112,000</td>
-                                            </tr>
+                                            {% endfor %}
                                         </tbody>
                                     </table>
                                 </div>
