showing stats in the cards above the dashbaord

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -69,38 +69,38 @@
                         {% endwith %}   
                         <div class="row">
                             <div class="col-xl-3 col-md-6">
-                                <div class="card bg-primary text-white mb-4">
-                                    <div class="card-body">Primary Card</div>
+                                <div class="card bg-success text-white mb-4">
+                                    <div class="card-body">{{ data.ok }}</div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="#">View Details</a>
+                                        <div class="small text-white stretched-link" href="#">Total OK SMSs</div>
                                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-3 col-md-6">
+                                <div class="card bg-primary text-white mb-4">
+                                    <div class="card-body">{{ data.double }}</div>
+                                    <div class="card-footer d-flex align-items-center justify-content-between">
+                                        <div class="small text-white stretched-link" href="#">Presented in 2 series SMSs</div>
+                                        <div class="small text-white"></div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-xl-3 col-md-6">
                                 <div class="card bg-warning text-white mb-4">
-                                    <div class="card-body">Warning Card</div>
+                                    <div class="card-body">{{ data.failure }}</div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="#">View Details</a>
-                                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xl-3 col-md-6">
-                                <div class="card bg-success text-white mb-4">
-                                    <div class="card-body">Success Card</div>
-                                    <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="#">View Details</a>
-                                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                        <div class="small text-white stretched-link" href="#">Presented in failure SMSs</div>
+                                        <div class="small text-white"></div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-xl-3 col-md-6">
                                 <div class="card bg-danger text-white mb-4">
-                                    <div class="card-body">Danger Card</div>
+                                    <div class="card-body">{{ data.notfound }}</div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="#">View Details</a>
-                                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                        <div class="small text-white stretched-link" href="#">Total Not-Found SMSs</div>
+                                        <div class="small text-white"></div>
                                     </div>
                                 </div>
                             </div>
@@ -148,6 +148,7 @@
                                     <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                         <thead>
                                             <tr>
+                                                <th>Status</th>
                                                 <th>Sender</th>
                                                 <th>Message</th>
                                                 <th>Answer</th>
@@ -156,6 +157,7 @@
                                         </thead>
                                         <tfoot>
                                             <tr>
+                                                <th>Status</th>
                                                 <th>Sender</th>
                                                 <th>Message</th>
                                                 <th>Answer</th>
@@ -165,6 +167,7 @@
                                         <tbody>
                                             {% for sms in data.smss %}
                                             <tr>
+                                                <td>{{sms.status}}</td>
                                                 <td>{{sms.sender}}</td>
                                                 <td>{{sms.message}}</td>
                                                 <td>{{sms.answer}}</td>
