removed unnecessary arrow under "Total OK SMSs"

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -62,7 +62,7 @@
                                     <div class="card-body">{{ data.ok }}</div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
                                         <div class="small text-white stretched-link" href="#">Total OK SMSs</div>
-                                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                        <div class="small text-white"></div>
                                     </div>
                                 </div>
                             </div>
