message and answer fields in admin panel are RTL

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -158,8 +158,8 @@
                                             <tr>
                                                 <td>{{sms.status}}</td>
                                                 <td>{{sms.sender}}</td>
-                                                <td>{{sms.message}}</td>
-                                                <td>{{sms.answer}}</td>
+                                                <td style="direction:rt; text-align: center">{{sms.message}}</td>
+                                                <td style="direction: rtl; text-align: right;">{{sms.answer}}</td>
                                                 <td>{{sms.date}}</td>
                                             </tr>
                                             {% endfor %}
