A example title changed and a little code bug resolved
It is a little change but sometimes it looks big.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,10 +34,10 @@
                         <div class="nav">
                                 <div class="nav-link h4 mt-4 text-secondary">Altech Hologram</div>
                             <div class="sb-sidenav-menu-heading">Core</div>
-                            <a class="nav-link" href="/"
-                                ><div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                                Dashboard</a
-                            >
+                            <a class="nav-link" href="/">
+				    <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                                Dashboard
+			    </a>
                             <div class="sb-sidenav-menu-heading">User</div>
 
                             <a class="nav-link" href="/logout">                            
@@ -126,7 +126,7 @@
                             </div>
                         </div>
                         <div class="card mb-4">
-                            <div class="card-header"><i class="fas fa-table mr-1"></i>DataTable Example</div>
+                            <div class="card-header"><i class="fas fa-table mr-1"></i>Previous Messages</div>
                             <div class="card-body">
                                 <div class="table-responsive">
                                     <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
