added link to github page near copyleft

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -168,7 +168,7 @@
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid">
                         <div class="d-flex align-items-center justify-content-between small">
-                            {% include 'copyleft.html' %}
+				{% include 'copyleft.html' %} <a href="https://github.com/jadijadi/sms_serial_verification">Github Page</a>
                         </div>
                     </div>  
                 </footer>
