--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -126,7 +126,7 @@
                             </div>
                         </div>
                         <div class="card mb-4">
-                            <div class="card-header"><i class="fas fa-table mr-1"></i>DataTable Example</div>
+                            <div class="card-header"><i class="fas fa-table mr-1"></i>SMS History</div>
                             <div class="card-body">
                                 <div class="table-responsive">
                                     <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
@@ -153,7 +153,7 @@
                                             <tr>
                                                 <td>{{sms.status}}</td>
                                                 <td>{{sms.sender}}</td>
-                                                <td style="direction:rt; text-align: center">{{sms.message}}</td>
+                                                <td style="direction: rtl; text-align: center">{{sms.message}}</td>
                                                 <td style="direction: rtl; text-align: right;">{{sms.answer}}</td>
                                                 <td>{{sms.date}}</td>
                                             </tr>
