Fix logout icon
change from fa-tachometer-alt to fas fa-sign-out-alt

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -41,7 +41,7 @@
                             <div class="sb-sidenav-menu-heading">User</div>
 
                             <a class="nav-link" href="/logout">                            
-                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                                <div class="sb-nav-link-icon"><i class="fas fa-sign-out-alt"></i></div>
                                 Logout
                             </a>
                         </div>
