database sanity check in GUI and core

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,12 +36,14 @@
                             <div class="sb-sidenav-menu-heading">Core</div>
                             <a class="nav-link" href="/"
                                 ><div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                                Dashboard</a
-                            >
+                                Dashboard</a>
+                            <a class="nav-link" href="/dbcheck"
+                                ><div class="sb-nav-link-icon"><i class="fa fa-snowplow"></i></div>
+                                Check DB</a>                            
                             <div class="sb-sidenav-menu-heading">User</div>
 
                             <a class="nav-link" href="/logout">                            
-                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                                <div class="sb-nav-link-icon"><i class="fas fa-sign-out-alt"></i></div>
                                 Logout
                             </a>
                         </div>
