user can see all DB sanity check errors in one place with a new menu

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,12 +34,16 @@
                         <div class="nav">
                                 <div class="nav-link h4 mt-4 text-secondary">Altech Hologram</div>
                             <div class="sb-sidenav-menu-heading">Core</div>
-                            <a class="nav-link" href="/"
-                                ><div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            <a class="nav-link" href="/">
+                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                 Dashboard</a>
-                            <a class="nav-link" href="/dbcheck"
-                                ><div class="sb-nav-link-icon"><i class="fa fa-snowplow"></i></div>
-                                Check DB</a>                            
+                            <a class="nav-link" href="/dbcheck/gui/">
+                            <div class="sb-nav-link-icon"><i class="fa fa-snowplow"></i></div>
+                                Check DB GUI</a>                            
+                            <a class="nav-link" href="/dbcheck/raw/" target="_blank">
+                            <div class="sb-nav-link-icon"><i class="fa fa-snowplow"></i></div>
+                                Check DB Raw</a>                            
+
                             <div class="sb-sidenav-menu-heading">User</div>
 
                             <a class="nav-link" href="/logout">                            
