--- a/app/templates/copyleft.html
+++ b/app/templates/copyleft.html
@@ -1,4 +1,4 @@
-<div class="text-muted">Copyleft; Altech
+<div class="text-muted">Copyleft by Altech (Schneider Electric Iran)
     <script type="text/javascript">
         document.write(new Date().getFullYear());
     </script>
